--- a/css/myCss.css
+++ b/css/myCss.css
@@ -1,4 +1,4 @@
-.navbar {
+.navbar, #genSimplePwOutput, #genPwOutput {
      text-align: center !important;
  }
 
@@ -21,10 +21,6 @@
 .charts > svg {
     height: 100%;
     display: block;
-}
-
-#chart-container{
-    margin-top: 100px;
 }
 
 #simplepw{
